5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1644_2447.log
== TEST (2019-04-11 16:51:15) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	X=pr-pg
	print(round("Falta X",2))
else:
	Y=pg-pr
	print(round("Troco de Y"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round("Falta X",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:56) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print(round("Falta" + pr-pg,2))
else:
	print(round("Troco de" + pg-pr,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("Falta" + pr-pg,2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:36) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print(round("Falta" + pr-pg,2))
else:
	print(round("Troco de" + pg-pr,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("Falta" + pr-pg,2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:35:08) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print(round("Falta",2))
else:
	print(round("Troco de",2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("Falta",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:37:22) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print(round("Falta",2))
else:
	print(round("Troco de",2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("Falta",2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:38:34) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print(pr-pg)
else:
	print(pg-pr)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:39:54) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print("Falta" pr-pg)
else:
	print("Troco de" pg-pr)
-- ERROR:
File "XXXX", line 4
    print("Falta" pr-pg)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:41:00) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print("Falta" + pr-pg)
else:
	print("Troco de" + pg-pr)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Falta" + pr-pg)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:42:00) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print("Falta", pr-pg)
else:
	print("Troco de", pg-pr)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:42:16) 
-- CODE:
pr=float(input("Qual o preco:? "))
pg=float(input("Qual o pagamento:? "))
if (pr > pg):
	print("Falta", pr-pg)
else:
	print("Troco de", pg-pr)
-- EXECUTION TIME:
0.139586
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
